--- a/api.html
+++ b/api.html
@@ -1,3 +1,4 @@
+<html>
 <script type="text/javascript">
    var sum = 0; 
    var str=location.href; //取得整个地址栏
@@ -20,3 +21,4 @@
 <body>
 <image src="https://github.com/zhuohl/zhuohl.github.io/blob/main/images/jh.png">111asd</image>
 </body>
+	</html>
