--- a/api.html
+++ b/api.html
@@ -1,4 +1,3 @@
-<html>
 <script type="text/javascript">
    var sum = 0; 
    var str=location.href; //取得整个地址栏
@@ -15,10 +14,5 @@
      } 
     }
 	document.write(sum);
+	<script src="https://github.com/zhuohl/zhuohl.github.io/blob/main/images/jh.png"></script>
 </script>
-
-
-<body>
-<image src="https://github.com/zhuohl/zhuohl.github.io/blob/main/images/jh.png">111asd</image>
-</body>
-	</html>
