--- a/image.html
+++ b/image.html
@@ -1,1 +1,2 @@
-<img src="https://zhuohl.github.io/images/jh.png">
+图像：<img src="https://zhuohl.github.io/images/jh.png">
+链接：<a href="https://zhuohl.github.io">.io</a>
