--- a/image.html
+++ b/image.html
@@ -1,2 +1,6 @@
-图像：<img src="https://zhuohl.github.io/images/jh.png">
-链接：<a href="https://zhuohl.github.io">.io</a>
+图像1：<img src="https://zhuohl.github.io/images/jh.png">
+链接1：<a href="https://zhuohl.github.io">.io</a>
+图像2：<img src="https://zhuohl.github.io/images/jh.png">
+链接2：<a href="https://zhuohl.github.io">.io</a>
+图像3：<img src="https://zhuohl.github.io/images/jh.png">
+链接3：<a href="https://zhuohl.github.io">.io</a>
