--- a/image.html
+++ b/image.html
@@ -1,6 +1,6 @@
-图像1：<img src="https://zhuohl.github.io/images/jh.png" id="1">
+图像1：<img src="https://zhuohl.github.io/images/jh.png" id="image">
 链接1：<a href="https://zhuohl.github.io">.io</a>
-图像2：<img src="https://zhuohl.github.io/images/jh.png" id="2">
+图像2：<img src="https://zhuohl.github.io/images/qy.png" id="image">
 链接2：<a href="https://zhuohl.github.io">.io</a>
-图像3：<img src="https://zhuohl.github.io/images/jh.png" id="3">
+图像3：<img src="https://zhuohl.github.io/images/hsj.png" id="image">
 链接3：<a href="https://zhuohl.github.io">.io</a>
