--- a/image.html
+++ b/image.html
@@ -1,6 +1,6 @@
-图像1：<img src="https://zhuohl.github.io/images/jh.png" id="image">
-链接1：<a href="https://zhuohl.github.io">.io</a>
-图像2：<img src="https://zhuohl.github.io/images/qy.png" id="image">
-链接2：<a href="https://zhuohl.github.io">.io</a>
-图像3：<img src="https://zhuohl.github.io/images/hsj.png" id="image">
-链接3：<a href="https://zhuohl.github.io">.io</a>
+id:1
+img:<img src="https://zhuohl.github.io/images/jh.png" id="image">
+id:2
+img:<img src="https://zhuohl.github.io/images/jh.png" id="image">
+id:3
+img:<img src="https://zhuohl.github.io/images/jh.png" id="image">
