--- a/image.html
+++ b/image.html
@@ -1,6 +1,19 @@
+<script>
+var i;
+var mycars = new Array();
+mycars[0] = "Saab";
+mycars[1] = "Volvo";
+mycars[2] = "BMW";
+for (i=0;i<mycars.length;i++){
+	document.write(mycars[i] + "<br />");
+}
+</script>
+
 id:1
 img:<img src="https://zhuohl.github.io/images/jh.png" id="image">
 id:2
 img:<img src="https://zhuohl.github.io/images/jh.png" id="image">
 id:3
 img:<img src="https://zhuohl.github.io/images/jh.png" id="image">
+
+
