--- a/image.html
+++ b/image.html
@@ -9,11 +9,14 @@ for (i=0;i<mycars.length;i++){
 }
 </script>
 
+
+<body>
 id:1
 img:<img src="https://zhuohl.github.io/images/jh.png" id="image">
 id:2
 img:<img src="https://zhuohl.github.io/images/jh.png" id="image">
 id:3
 img:<img src="https://zhuohl.github.io/images/jh.png" id="image">
+</body>
 
 
