--- a/image.html
+++ b/image.html
@@ -1,23 +1,19 @@
-<script>
-var i;
-var mycars = new Array();
-mycars[0] = "Saab";
-mycars[1] = "Volvo";
-mycars[2] = "BMW";
-for (i=0;i<mycars.length;i++){
-	document.write(mycars[i] + "<br />");
-}
-</script>
-
-
-<body>
-id:1
-img:<img src="https://zhuohl.github.io/images/jh.png" id="image">
-id:2
-img:<img src="https://zhuohl.github.io/images/jh.png" id="image">
-id:3
-img:<img src="https://zhuohl.github.io/images/jh.png" id="image">
-https://zhuohl.github.io/images/qy.png
-</body>
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title></title>
+	</head>
+	<body>
+		<img  src="img/jh.png"/>
+		<img  src="img/qy.png"/>
+		<img  src="img/hsj.png"/>
+		<img  src="img/tlry.png"/>
+		<img  src="img/xlgwy.png"/>
+		<img  src="img/sydh.png"/>
+		<img  src="img/szlkjg.png"/>
+		<img  src="img/zswdzz.png"/>
+		<img  src="img/ttz2.png"/>
+	</body>
+</html>
 
