--- a/image.html
+++ b/image.html
@@ -5,15 +5,15 @@
 		<title></title>
 	</head>
 	<body>
-		<img  src="img/jh.png"/>
-		<img  src="img/qy.png"/>
-		<img  src="img/hsj.png"/>
-		<img  src="img/tlry.png"/>
-		<img  src="img/xlgwy.png"/>
-		<img  src="img/sydh.png"/>
-		<img  src="img/szlkjg.png"/>
-		<img  src="img/zswdzz.png"/>
-		<img  src="img/ttz2.png"/>
+		<img  src="https://zhuohl.github.io/images/jh.png"/>
+		<img  src="https://zhuohl.github.io/images/jh.png"/>
+		<img  src="https://zhuohl.github.io/images/jh.png"/>
+		<img  src="https://zhuohl.github.io/images/jh.png"/>
+		<img  src="https://zhuohl.github.io/images/jh.png"/>
+		<img  src="https://zhuohl.github.io/images/jh.png"/>
+		<img  src="https://zhuohl.github.io/images/jh.png"/>
+		<img  src="https://zhuohl.github.io/images/jh.png"/>
+		<img  src="https://zhuohl.github.io/images/jh.png"/>
 	</body>
 </html>
 
