--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+<meta charset="utf-8">
+</head>
+<script src="js/yy.js"></script>
 
-<?php
-$cars[0]="porsche";
-$cars[1]="BMW";
-$cars[2]="Volvo";
-echo "I like " . $cars[0] . ", " . $cars[1] . " and " . $cars[2] . ".";
-?>
-123
+<body>
+<button onclick="onc()">点击</button>
+
+
 </body>
 </html>
