--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 </head>
-<script src="js/yy.js"></script>
+<script src="https://github.com/zhuohl/zhuohl.github.io/blob/main/yy.js"></script>
 
 <body>
 <button onclick="onc()">点击</button>
