--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src="https://github.com/zhuohl/zhuohl.github.io/blob/main/yy.js"></script>
 
 <body>
-<button onclick="onc()">点击1</button>
+<button onclick="onc()">测试1</button>
 
 
 </body>
