--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 <meta charset="utf-8">
 </head>
-<script src="https://raw.githubusercontent.com/zhuohl/zhuohl.github.io/main/yy.js"></script>
+<script src="http://raw.githack.com/zhuohl/zhuohl.github.io/main/yy.js">
+  document.write("<h1>这是一个标题</h1>");
+  </script>
 
 <body>
-<button onclick="onc()">测试2</button>
+<button onclick="onc()">测试3</button>
 
 
 </body>
